--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
   background-image: url(./BackGround.jpg);
+  color:white;
 }
 
 code {
@@ -15,6 +16,7 @@ code {
 }
 
 .flex{display:flex;}
+
 
 .x1{flex:1;}
 .x2{flex:2;}
