--- a/src/index.css
+++ b/src/index.css
@@ -223,3 +223,19 @@ margin:2%;
   background-color: rgba(0,0,0,.7);
   padding: 1em;
 }
+
+.projectSection{
+  padding: 1em;
+  margin-bottom:2em;
+}
+/*
+.borderBottomProject{
+  margin-right: 2em;
+  margin-left: 2em;
+  border-bottom: dashed gray 2px;
+}*/
+.borderBottomProject{
+  text-align: center;
+  color: gray;
+  font-size: 1.5em;
+}
