--- a/src/index.css
+++ b/src/index.css
@@ -228,14 +228,10 @@ margin:2%;
   padding: 1em;
   margin-bottom:2em;
 }
-/*
+
 .borderBottomProject{
-  margin-right: 2em;
-  margin-left: 2em;
-  border-bottom: dashed gray 2px;
-}*/
-.borderBottomProject{
-  text-align: center;
-  color: gray;
-  font-size: 1.5em;
+  margin-right: 10em;
+  margin-left: 10em;
+  margin-top:1em;
+  border-bottom: dashed gray .15em;
 }
