--- a/src/index.css
+++ b/src/index.css
@@ -188,6 +188,24 @@ margin:2%;
 
 
 /*Progects.jsx*/
+
+@keyframes ShadowBox {
+  0% {
+    box-shadow: 0px 0px rgb(1, 1, 58);
+  }
+  25% {
+    box-shadow: 2px 2px rgb(2, 2, 92);
+  }
+  50% {
+    box-shadow: 4px 4px rgb(4, 4, 137);
+  }
+  75% {
+    box-shadow: 6px 6px rgb(5, 5, 175);
+  }
+  100% {
+    box-shadow: 8px 8px rgb(3, 3, 206);
+  }
+}
 .LinkToGit a {
   color:white;
   text-decoration: none;
@@ -222,6 +240,13 @@ margin:2%;
   border-radius: 5px;
   background-color: rgba(0,0,0,.7);
   padding: 1em;
+  transition: all ease 0.5s;
+ 
+}
+
+#box :hover{
+  transform: translateY(-10px);
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
 }
 
 .projectSection{
