--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ img{
 
 /*Home*/
 /*this doesn't work on school mac */
-@font-face {
+/*@font-face {
   font-family: Play;
   src: url("C:\fonts\Play\Play-Regular.ttf") format("opentype");
 }
@@ -92,7 +92,7 @@ img{
 font-family: PlayBold;
 font-weight: bold;
 src: url("C:\fonts\Play\Play-Bold.ttf") format("opentype");
-}
+}*/
 
 
 .article{
