--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,15 @@ font-weight: bold;
 src: url("C:\fonts\Play\Play-Bold.ttf") format("opentype");
 }*/
 
+/*mac*/
+
+
+
+
+
+
+
+
 
 .article{
 justify-content: center;
