--- a/src/index.css
+++ b/src/index.css
@@ -82,51 +82,16 @@ img{
 
 
 /*Home*/
-/*this doesn't work on school mac */
-/*@font-face {
+@font-face {
   font-family: Play;
-  src: url("C:\fonts\Play\Play-Regular.ttf") format("opentype");
+  src: url("../public/Play/Play-Regular.ttf") format("opentype");
 }
 
 @font-face {
 font-family: PlayBold;
 font-weight: bold;
-src: url("C:\fonts\Play\Play-Bold.ttf") format("opentype");
-}*/
-
-/*mac*/
-
-@font-face {
-  font-family: Play;
-  src: url("~/Downloads/Play/Play-Regular.ttf") format("opentype");
+src: url("../public/Play/Play-Bold.ttf") format("opentype");
 }
-
-@font-face {
-font-family: PlayBold;
-font-weight: bold;
-src: url("~/Downloads/Play/Play-Bold.ttf") format("opentype");
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 .article{
