--- a/src/index.css
+++ b/src/index.css
@@ -405,12 +405,44 @@ margin-bottom: 30px;
 
 .name{
   flex:1;
+  
 }
+.name input{
+  border:none;
+  transition: all ease 0.5s;
+}
+.name input:focus{
+  outline-style: solid;
+  outline-color: black;
+  outline-width: 2px;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.7);
+  transform: translateY(-10px);
+}
+
 .email{
   flex:1;
+}
+.email input{
+  border:none;
+  transition: all ease 0.5s;
+}
+.email input:focus{
+  outline-style: solid;
+  outline-color: black;
+  outline-width: 2px;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.7);
+  transform: translateY(-10px);
 }
 .message textarea{
   width:100%;
   height:10em;
+  transition: all ease 0.5s;
+}
+.message textarea:focus{
+  outline-style: solid;
+  outline-color: black; 
+  outline-width: 2px;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.7);
+  transform: translateY(-10px)
 }
 
