--- a/src/index.css
+++ b/src/index.css
@@ -375,7 +375,20 @@ margin-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
+}
+
+.ContactMe > div{
+  font-family: "Lucida Console", "Courier New", monospace;
+  margin:3em;
+  text-align: center;
+  font-size: 1em;
+  border:solid gray 2px;
+  border-radius: 5px;
+  background-color: rgba(0,0,0,.7);
+  padding: 1em;
+  transition: all ease 0.5s;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
 }
 .ContactMe .input{
   margin:1em;
@@ -389,16 +402,16 @@ margin-bottom: 30px;
 
 /*Styling the place holder!*/
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: black;
+  color: rgb(66, 66, 66);
   opacity: 1; /* Firefox */
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: black;
+  color: rgb(66, 66, 66);
 }
 
 ::-ms-input-placeholder { /* Microsoft Edge */
-  color: black;
+  color: rgb(66, 66, 66);
 }
 
 
