--- a/src/index.css
+++ b/src/index.css
@@ -423,6 +423,7 @@ margin-bottom: 30px;
 .name input{
   border:none;
   transition: all ease 0.5s;
+  border-radius: 2px;
 }
 .name input:focus{
   outline-style: solid;
@@ -438,6 +439,7 @@ margin-bottom: 30px;
 .email input{
   border:none;
   transition: all ease 0.5s;
+  border-radius: 2px;
 }
 .email input:focus{
   outline-style: solid;
@@ -450,12 +452,15 @@ margin-bottom: 30px;
   width:100%;
   height:10em;
   transition: all ease 0.5s;
+  border-radius: 2px;
 }
 .message textarea:focus{
   outline-style: solid;
   outline-color: black; 
   outline-width: 2px;
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.7);
-  transform: translateY(-10px)
+  transform: translateY(-10px);
 }
-
+.btn-send{
+    background-color: gray;
+}
