--- a/src/index.css
+++ b/src/index.css
@@ -350,7 +350,7 @@ margin-bottom: 30px;
   margin: 3em;
 }
 
-.ContactIcon a{
+.ContactIcon a, .ContactIcon div{
   background: none;
   padding:0px;
   color:white;
@@ -361,12 +361,12 @@ margin-bottom: 30px;
 
 }
 
-.ContactIcon a:hover{
+.ContactIcon a:hover, .ContactIcon div:hover{
   transform: scale(0.85);
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.3);
 }
 
-.ContactIcon a svg{
+.ContactIcon a svg, .ContactIcon div svg{
   height: 100%;
 }
 
@@ -375,7 +375,7 @@ margin-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-
+  
 }
 
 .ContactMe > form{
