--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,8 @@ img{
 .nav{
   justify-content: space-evenly;
   align-items: center;
+  transition: all ease 0.3s;
+
 }
 
 .header{
@@ -88,13 +90,14 @@ img{
   color:white;
   border-bottom: solid white 2px;
 }
-.nav{
-  transition: all ease 0.3s;
-}
+
 .hamburger{
   display: none;
 }
 .go{
+  display: none;
+}
+.big{
   display: none;
 }
 
@@ -508,7 +511,9 @@ margin-bottom: 25px;
 @media screen and (max-width: 850px){
   /*Break Point Header.jsx */
   
-  
+  .big{
+    display: flex;
+  }
   .nav{
     display: none;
   }
@@ -532,15 +537,17 @@ margin-bottom: 25px;
   }
   .hamburger{
     display: flex;
+    flex: 2;
     position: absolute;
-    top:0;
-    right:0;
-    left:0;
-    bottom:0;
     justify-content: right;
     align-items: center;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
     font-size: 2em;
     padding: 1em;
+    
   }
   /*Break Point Project.jsx*/
   .ReadMe{
