--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,8 @@ body {
 .container{
   max-width: 1500px;
   padding-top: 120px;
+  position: relative;
+  z-index: 0;
 }
 
 img{
@@ -63,6 +65,7 @@ img{
   font-family: "Lucida Console", "Courier New", monospace;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .myHeaderLogo{
@@ -94,11 +97,11 @@ img{
 .hamburger{
   display: none;
 }
-.go{
-  display: none;
-}
 .big{
   display: none;
+}
+.go{
+  display:none
 }
 
 
@@ -170,8 +173,6 @@ margin-bottom: 25px;
 
 
 /*GoFundMe*/
-
-
 #gofundmelink {
   font-size: 4em;
   justify-content: center;
@@ -181,6 +182,8 @@ margin-bottom: 25px;
   transition: all ease 0.5s;
   margin-bottom:2px;
   text-decoration: none;
+  padding-bottom: 0px;
+  border-bottom: solid white 2px;
 }
 
 #gofundmelink a:hover{
@@ -355,7 +358,6 @@ margin-bottom: 25px;
 .ContactIcon a, .ContactIcon div{
   color:white;
   font-size: 2em;
-  border-radius: 50%;
   filter: drop-shadow(0px 20px 40px rgba(255, 255, 255, 1));
   transition: all ease 0.25s;
 }
@@ -511,6 +513,9 @@ margin-bottom: 25px;
 @media screen and (max-width: 850px){
   /*Break Point Header.jsx */
   
+  .header{
+    
+  }
   .big{
     display: flex;
   }
@@ -518,36 +523,35 @@ margin-bottom: 25px;
     display: none;
   }
   .nav-smashed{
-    position: absolute;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    background-color: red;
+    position: absolute;
     top:0;
-    right:0;
-    left:0;
-    bottom:0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: 100dvh;
+    background-color: red;
     justify-content: center;
     align-items: center;
     font-size: 2em;
     gap: 1em;
   }
-  .go{
-    display: flex;
-  }
+
   .hamburger{
     display: flex;
     flex: 2;
     position: absolute;
+    right:0;
+    bottom: 0;
+    top:0;
     justify-content: right;
     align-items: center;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
     font-size: 2em;
-    padding: 1em;
-    
+    padding: 1em;  
+  }
+  .go{
+    display:flex;
   }
   /*Break Point Project.jsx*/
   .ReadMe{
