--- a/src/index.css
+++ b/src/index.css
@@ -512,10 +512,6 @@ margin-bottom: 25px;
 
 @media screen and (max-width: 850px){
   /*Break Point Header.jsx */
-  
-  .header{
-    
-  }
   .big{
     display: flex;
   }
@@ -531,7 +527,7 @@ margin-bottom: 25px;
     right: 0;
     left: 0;
     height: 100dvh;
-    background-color: red;
+    background-color: rgba(34, 34, 57, .95);
     justify-content: center;
     align-items: center;
     font-size: 2em;
