--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen','Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -144,7 +144,9 @@ padding: 0px;
 margin-bottom: 25px;
 }
 
-
+.add850{
+  display: none;
+}
 .quickDescription{
   border:solid gray 2px;
   border-radius: 5px;
@@ -485,21 +487,13 @@ margin-bottom: 25px;
     background-color: gray;
 }
 
-/* Discord DropDown*/
-.Dropdown{
-  position: relative;
-  max-width: 300px;
-}
 
-.Dropdown li {
-  border:solid gray 2px;
-  border-radius: 1em;
-  list-style: none;
-  padding: 0.5em;
-}
+
+
+
+
 
 /*-- Break points -- */
-
 
 
 @media screen and (max-width: 1200px){
@@ -535,7 +529,8 @@ margin-bottom: 25px;
     bottom: 0;
     left: 0;
     right:0;
-    height: 62.5em;
+    max-height: 62.5em;
+    min-height: 50em;
     overflow: hidden;
   }
   
@@ -634,51 +629,115 @@ margin-bottom: 25px;
   .ContactIcon a svg, .ContactIcon div svg{
     position: relative;
     left:-.65em;
+    right:0;
+    bottom: 0;
+    top:0
+    
   }
+  /*ContactME*/
+
+
 
 
   /*Break Point Home.jsx*/
+  
+  .article {
+    position: relative;
+    flex-direction: column;
+  }
   .article .info{
     position: relative;
-    
+    display: flex;
+    flex-direction: column-reverse;
   }
   .nameTitle{
-    margin-bottom: 0;
     position: relative;
-    display: flex;
     justify-content: center;
     align-items: center;
-    top: 0;
-    bottom: 0;
-    left: -.25em;
-    right:0;
-    width:50%;
-    height: 31.25rem;
+    font-size: 4.25em;
+    gap:1rem
+    
+    
   }
   .nameTitle>span{
     border: none;
+    margin-left: 1rem;
   }
   .Jack, .Ryan{
     display: block;
-    
-
   }
   .quickDescription{
-    margin: 1em;
+    margin: 0;
+    font-size: 1em;
   }
-  .homePicture{
-    width: 50%;
-    top: 0;
-    bottom: 0;
-    left: 21em;
-    right:0;
-    height: 31.25rem;
-    margin:0;
-    border:none;
-    overflow: hidden;
+  .add850{
+    display: flex;
+  }
+  .cut850{
+    display: none;
+  }
+  .homePicture.add850{
+    position: relative;
+    min-height: 0;
+    max-width:25rem;
+    max-height:25rem;
+    width: auto;
+    height: auto;
+    justify-content: right;
+  }
+  .homePicture.add850 img{
+    object-fit: cover;
+    height: 100%;
+ }
+
+}
+
+@media screen and (max-width:550px){
+  /*Contact*/
+  .NameEmail{
+    flex-direction: column;
+  }
+  .ContactMe > form{
+    margin: 0;
+    padding:0.25em
+   }
+   .message textarea{
+    max-width:40em;
+    min-width: 19em;
+    height: 10em;
+   }
+
+   /*goFundMe*/
+   #gofundmelink{
+    font-size: 2em;
+   }
+
+}
+
+
+@media screen and (max-width:365px){
+  /*header*/
+  .headerTitle{
+    display: none;
+  }
+  /*home*/
+  .nameTitle{
+    flex-direction: column;
+  }
+  .Jack, .Ryan{
+    display: block;
   }
 
- 
+  /*Contact*/
+  .ContactMe .input{
+    margin-left:0.1em;
+    margin-right:0.5em;
+   }
+   .message textarea{
+    max-width:40em;
+    min-width: 15em;
+    height: 10em;
+   }
 }
 
 
