--- a/src/index.css
+++ b/src/index.css
@@ -336,6 +336,7 @@ margin-bottom: 25px;
 .LanguageImage:hover{
   transform: translateY(-10px);
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
 }
 
 
@@ -372,6 +373,7 @@ margin-bottom: 25px;
 .ContactIcon a:hover, .ContactIcon div:hover{
   transform: scale(0.85);
   filter: drop-shadow(0px 20px 40px rgba(0, 0, 0, 1));
+  cursor: pointer;
 }
 
 .ContactIcon a svg, .ContactIcon div svg{
