--- a/_archive/src/index.css
+++ b/_archive/src/index.css
@@ -15,7 +15,7 @@
 .flex.center{justify-content: center;}
 .flex.left{justify-content: left;}
 .flex.top{align-items: start;}
-.flex.middle{align-items: center};
+.flex.middle{align-items: center;}
 .flex.bottom{align-items: end;}
 
 .flex-column{
