--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,5 +8,9 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+
+html, body{
+  height: 100dvh;
 }
