finished home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,6 @@ body {
   font-family: "Lucida Console", "Courier New", monospace;
 }
 
-html, body{
-  height: 100dvh;
+.background-gradient {
+  background: linear-gradient(#000000 0%, #000000 30%, #515151 80%, #ffffff 100%);
 }
